--- a/static-assignments/check-connection.yaml
+++ b/static-assignments/check-connection.yaml
@@ -1,6 +1,6 @@
 ---
 - name: "check all connection"
-  hosts: webservers, nfs, db, lb
+  hosts: webservers, nfs, db, lb, uat-webservers
 
   tasks:
   - name: Test connectivity
