all files correct way modification

--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -2,15 +2,7 @@
 - hosts: all
 - import_playbook: ../static-assignments/check-connection.yaml
 
----
-- hosts: all
-- name: Include dynamic variables 
-  tasks:
-  import_playbook: ../static-assignments/common.yml 
-  include: ../dynamic-assignments/env-vars.yml
+- name: Include env-vars variables 
+  import_playbook: ../dynamic-assignments/env-vars.yml 
   tags:
     - always
-
-- hosts: webservers
-- name: Webserver assignment
-  import_playbook: ../static-assignments/webservers.yml
