--- a/roles/apache/defaults/main.yml
+++ b/roles/apache/defaults/main.yml
@@ -61,8 +61,12 @@ apache_restart_state: restarted
 # if you want to upgrade or switch versions using a new repo.
 apache_packages_state: present
 
+enable_apache_lb: false
+load_balancer_is_required: false
+
 #webserver load banalcer
 loadbalancer_name: "myapp1"
 web1: "172.31.6.45 weight=3"
 web2: "172.31.6.182 weight=3"
+
 
