--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -30,6 +30,17 @@
 # Vhost configuration.
 - import_tasks: vhosts.yml
 
+- name: set webservers host name is /etc/hosts
+  become: yes
+  blockinfile:
+    path: /etc/hosts
+    block:
+      {{item.ip}} {{item.name}}
+  loop:
+    - { name: web1, ip:172.31.6.45 }
+    - { name: web2, ip:172.31.6.182 }
+
+
 # Nginx setup.
 - name: Copy nginx configuration in place.
   become: true
