--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -30,23 +30,22 @@
 # Vhost configuration.
 - import_tasks: vhosts.yml
 
-- name: set webservers host name is /etc/hosts
+- name: set webservers host name in /etc/hosts
   become: yes
-  blockinfile:
+  blockinfile: 
     path: /etc/hosts
-    block:
-      {{item.ip}} {{item.name}}
+    block: |
+      {{ item.ip }} {{ item.name }}
   loop:
-    - { name: web1, ip:172.31.6.45 }
-    - { name: web2, ip:172.31.6.182 }
-
+    - { name: web1, ip: 172.31.6.45 }
+    - { name: web2, ip: 172.31.6.182 }
 
 # Nginx setup.
 - name: Copy nginx configuration in place.
-  become: true
+  become: yes
   template:
-    src: "{{ nginx_conf_template }}"
-    dest: "{{ nginx_conf_file_path }}"
+    src: "nginx.conf.j2"
+    dest: "/etc/nginx/nginx.conf"
     owner: root
     group: "{{ root_group }}"
     mode: 0644
@@ -54,7 +53,7 @@
     - reload nginx
 
 - name: Ensure nginx service is running as configured.
-  become: true
+  become: yes
   service:
     name: nginx
     state: "{{ nginx_service_state }}"
