--- a/static-assignments/common.yml
+++ b/static-assignments/common.yml
@@ -1,16 +1,16 @@
 ---
-- name: update web, nfs and db servers
-  hosts: webservers, nfs
-  remote_user: ec2-user
-  become: yes
-  become_user: root
-  tasks:
-    - name: ensure wireshark is at the latest version
-      yum:
-        name: wireshark
-        state: latest
+#- name: update web, nfs and db servers
+#  hosts: webservers, nfs
+ # remote_user: ec2-user
+ # become: yes
+  #become_user: root
+  #tasks:
+   # - name: ensure wireshark is at the latest version
+    #  yum:
+     #   name: wireshark
+       # state: latest
 
-- name: update LB server
+- name: update LB and dbserver
   hosts: lb, db
   remote_user: ubuntu
   become: yes
@@ -20,7 +20,7 @@
       apt:
         update_cache: yes
 
-    - name: ensure wireshark is at the latest version
-      apt:
-        name: wireshark
-        state: latest
+  #  - name: ensure wireshark is at the latest version
+   #   apt:
+    #    name: wireshark
+    #    state: latest
