--- a/static-assignments/lb.yaml
+++ b/static-assignments/lb.yaml
@@ -3,3 +3,5 @@
   roles:
     - { role: nginx, when: enable_nginx_lb and load_balancer_is_required }
     - { role: apache, when: enable_apache_lb and load_balancer_is_required }
+  become: true
+  remote_src: yes
