--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -1,23 +1,12 @@
 ---
 - hosts: all
-- name: Include dynamic variables 
-  tasks:
-  import_playbook: ../static-assignments/common.yml 
-  include: ../dynamic-assignments/env-vars.yml
-  tags:
-    - always
+- import_playbook: ../static-assignments/common.yml
 
-- name: Loadbalancers assignment
-  hosts: lb
-  tasks:
-  import_playbook: ../static-assignments/lb.yml
-  when: load_balancer_is_required 
-
-- name: db assignment
-  hosts: db
-  tasks:
-  import_playbook: ../static-assignments/db.yml
-  
 - hosts: webservers
-  name: Webserver assignment
-  import_playbook: ../static-assignments/uat-webservers.yml
+- import_playbook: ../static-assignments/uat-webservers.yml
+
+- hosts: db
+- import_playbook: ../static-assignments/db.yml
+
+- hosts: db
+- import_playbook: ../static-assignments/lb.yml
