mofied files which are working

--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -6,7 +6,7 @@
 - import_playbook: ../static-assignments/uat-webservers.yml
 
 - hosts: db
-- import_playbook: ../static-assignments/db.yml
+- import_playbook: /home/ubuntu/ansible-configuration-management/static-assignments/db.yml
 
-- hosts: db
+- hosts: lb
 - import_playbook: ../static-assignments/lb.yml
