--- a/playbooks/site.yaml
+++ b/playbooks/site.yaml
@@ -1,12 +1,18 @@
 ---
 - hosts: all
-- import_playbook: ../static-assignments/common.yml
 
-- hosts: webservers
-- import_playbook: ../static-assignments/uat-webservers.yml
+- name: Include dynamic variables
+  import_playbook: ../static-assignments/update.yml
+  include: ../dynamic-assignments/env-vars.yml
+  tags:
+    - always
 
-- hosts: db
-- import_playbook: /home/ubuntu/ansible-configuration-management/static-assignments/db.yml
+- name: Delete wireshark installation
+  import_playbook: ../static-assignments/common-del.yml
 
-- hosts: lb
-- import_playbook: ../static-assignments/lb.yml
+- name: webserver
+  import_playbook: ../static-assignments/webservers.yml
+
+- name: Loadbalancers assignment
+  import_playbook: ../static-assignments/lb.yml
+  when: load_balancer_is_required
