--- a/static-assignments/lb.yaml
+++ b/static-assignments/lb.yaml
@@ -1,7 +1,6 @@
----
 - hosts: lb
-become: true
+  become: true
   roles:
-    - { role: dragonbe.nginx_loadbalancer, when: enable_nginx_lb and load_balancer_is_required }
-    - { role: apache, when: enable_apache_lb and load_balancer_is_required }
+    - { role: nginxRole, when: enable_nginx_lb and load_balancer_is_required }
+    - { role: apacheRole, when: enable_apache_lb and load_balancer_is_required }
 
